--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "nodeweave",
   "version": "0.1.0",
+  "type": "module",
   "private": true,
   "scripts": {
     "dev": "next dev --turbopack",
@@ -20,7 +21,8 @@
     "@paralleldrive/cuid2": "^3.3.0",
     "@polar-sh/better-auth": "^1.7.0",
     "@polar-sh/sdk": "^0.42.5",
-    "@prisma/client": "6.17.1",
+    "@prisma/adapter-pg": "^7.4.0",
+    "@prisma/client": "^7.4.0",
     "@radix-ui/react-accordion": "^1.2.12",
     "@radix-ui/react-alert-dialog": "^1.1.15",
     "@radix-ui/react-aspect-ratio": "^1.1.8",
@@ -51,6 +53,7 @@
     "@trpc/client": "^11.9.0",
     "@trpc/server": "^11.9.0",
     "@trpc/tanstack-react-query": "^11.9.0",
+    "@types/pg": "^8.16.0",
     "@xyflow/react": "^12.10.0",
     "ai": "^6.0.69",
     "better-auth": "^1.4.18",
@@ -70,7 +73,9 @@
     "lucide-react": "^0.563.0",
     "next": "^16.1.6",
     "next-themes": "^0.4.6",
+    "nodemailer": "^8.0.1",
     "nuqs": "^2.8.8",
+    "pg": "^8.18.0",
     "random-word-slugs": "^0.1.7",
     "react": "19.2.4",
     "react-day-picker": "^9.13.0",
@@ -91,16 +96,21 @@
     "@eslint/eslintrc": "^3",
     "@tailwindcss/postcss": "^4",
     "@types/node": "^25",
+    "@types/nodemailer": "^7.0.9",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "@types/toposort": "^2.0.7",
     "eslint-config-next": "16.1.6",
     "inngest-cli": "^1.16.1",
     "mprocs": "^0.8.3",
-    "prisma": "6.17.1",
+    "prisma": "^7.4.0",
     "tailwindcss": "^4",
     "tsx": "^4.21.0",
     "tw-animate-css": "^1.4.0",
     "typescript": "^5"
+  },
+  "overrides": {
+    "hono": "^4.11.7",
+    "lodash": "^4.17.23"
   }
 }
